# tmp

./: AIAssistant.qml  CMakeLists.txt  DataDetail.qml  DataManage.qml  HomePage.qml  Main.qml  main.cpp
Components/: MyButton.qml  Title.qml
